[project]
name = "pi-long"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "faiss-cpu>=1.13.0",
    "huggingface-hub>=1.1.6",
    "importlib-metadata>=8.7.0",
    "numba>=0.62.1",
    "numpy<2.0.0",
    "onnxruntime>=1.23.2",
    "pillow>=12.0.0",
    "prettytable>=3.17.0",
    "pyparsing>=3.2.5",
    "pytorch-lightning>=2.6.0",
    "pytorch-metric-learning>=2.9.0",
    "safetensors>=0.7.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "xformer>=1.0.1",
]

[build-system]
requires = ["setuptools>=61", "wheel", "torch==2.5.1"]
build-backend = "setuptools.build_meta"

