[project]
name = "pi-long"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "faiss-cpu>=1.13.0",
    "huggingface-hub>=1.1.6",
    "importlib-metadata>=8.7.0",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy<2.0.0",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "plyfile>=1.1.3",
    "prettytable>=3.17.0",
    "pyparsing>=3.2.5",
    "pypose>=0.7.3",
    "pytorch-lightning>=2.6.0",
    "pytorch-metric-learning>=2.9.0",
    "rerun-sdk>=0.23.1",
    "safetensors>=0.7.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "trimesh>=4.10.0",
    "xformer>=1.0.1",
]

[build-system]
requires = ["setuptools>=61", "wheel", "torch==2.5.1"]
build-backend = "setuptools.build_meta"

